# Zerg-Rush-For-Claude-Code

./: .mcp.json  CLAUDE.md  FLAWS.md  ORSON_IDE_PLAN.md  README.md  orson  orson.py  orson_cli.py  pyproject.toml
SWARM/: GATES.md  OVERLORD.md  PROMPTS.md  RUNBOOK.md  STATE.json  SWARM_RULES.md  ZERGLING.md
SWARM/PLANS/: WAVE27_UI_READABILITY.md  WAVE28_BUG_FIXES.md
SWARM/SCRIPTS/: swarm.py
SWARM/TASKS/: EXAMPLE-001.md  T001.md  TEMPLATE.md
SWARM/TASKS/DEX/: D001.md  D002.md  D003.md  README.md
SWARM/TASKS/INTEGRATION/: DOC-001.md  DOC-002.md  DOC-003.md  DOC-004.md  INT-001.md  INT-002.md  INT-003.md  INT-004.md  INT-005.md  INT-006.md  INT-007.md  INT-008.md  MCP-001.md  MCP-002.md  MCP-003.md  MCP-004.md  MCP-005.md  MCP-006.md  MCP-007.md  MCP-008.md  MCP-009.md  MCP-010.md  MCP-011.md  MCP-012.md  MCP-013.md  MCP-014.md  (+7 more)
SWARM/TEMPLATES/: RESULT_TEMPLATE.md  TASK_TEMPLATE.md
benchmarks/kernel/: bench_matmul.py
scripts/ml/: smoke_test.py
src/dex/: config.py  guardrails.py  tx_builder.py
src/kernel/: __init__.py  reference.py
src/ml/: __init__.py  config.py  metrics.py
src/orson/: __init__.py  __main__.py  cli.py  components.py  mcp_client.py  rag_client.py  refresh_controller.py  server.py  spawner.py  state.py  status_manager.py  tui.py
src/quant/: __init__.py  backtest.py  metrics.py  sanity.py
src/zerg_swarm_mcp/: __init__.py  __main__.py  config.py  flavor.py  models.py  server.py
tests/: __init__.py  test_mcp_server.py  test_phase3_buildings.py  test_spawner.py  test_wave19_integration.py
tests/kernel/: test_matmul_golden.py
(+37 files in other folders)
