[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerg-swarm-mcp"
version = "0.1.0"
description = "Zerg Swarm MCP Server for multi-agent coordination"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
zerg-swarm-mcp = "zerg_swarm_mcp.__main__:main"
orson = "orson.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zerg_swarm_mcp", "src/orson"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

